// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display only one url 1`] = `
<li
  className="little-spacer-bottom"
>
  <ul
    className="list-inline"
  >
    <li>
      <a
        className="js-plugin-homepage"
        href="homepageurl"
        target="_blank"
      >
        marketplace.homepage
      </a>
    </li>
  </ul>
</li>
`;

exports[`should display the urls 1`] = `
<li
  className="little-spacer-bottom"
>
  <ul
    className="list-inline"
  >
    <li>
      <a
        className="js-plugin-homepage"
        href="homepageurl"
        target="_blank"
      >
        marketplace.homepage
      </a>
    </li>
    <li>
      <a
        className="js-plugin-issues"
        href="issuetrackerurl"
        target="_blank"
      >
        marketplace.issue_tracker
      </a>
    </li>
  </ul>
</li>
`;
